--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,8 +29,8 @@
             height="18">
         </a>
       </div>
-      <nav class="main-navigation main-nav--closed main-nav--nojs">
-        <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <nav class="main-navigation main-navigation--closed main-navigation--nojs">
+        <button class="main-navigation__toggle" type="button"><span class="main-navigation__toggle-btn"></span></button>
         <ul class="main-navigation__list reset-list">
           <li class="main-navigation__item reset-item">
             <a class="main-navigation__link main-navigation__link--inner" href="index.html">Главная</a>
@@ -394,7 +394,7 @@
               </div>
 
               <a class="add-goods__link button" href="#">
-                <span class="button__text card-cart__text-btn">Заказать</span></a>
+                <span class="button__text add-goods__text-btn">Заказать</span></a>
             </div>
           </li>
           <li class="add-goods__item reset-item">
@@ -408,7 +408,7 @@
                 </div>
               </div>
               <a class="add-goods__link button" href="#">
-                <span class="button__text card-cart__text-btn">Заказать</span></a>
+                <span class="button__text add-goods__text-btn">Заказать</span></a>
             </div>
           </li>
           <li class="add-goods__item reset-item">
@@ -422,7 +422,7 @@
                 </div>
               </div>
               <a class="add-goods__link button" href="#">
-                <span class="button__text card-cart__text-btn">Заказать</span></a>
+                <span class="button__text add-goods__text-btn">Заказать</span></a>
             </div>
           </li>
           <li class="add-goods__item reset-item">
@@ -436,13 +436,13 @@
                 </div>
               </div>
               <a class="add-goods__link button" href="#">
-                <span class="button__text card-cart__text-btn">Заказать</span></a>
+                <span class="button__text add-goods__text-btn">Заказать</span></a>
             </div>
           </li>
         </ul>
         <div class="add-goods__wrapper-buy-all">
           <div class="buy-all">
-            <img class="buy-all__image" src="img/catalog/buy-all.svg" alt="Подарок." height="" width="">
+            <img class="buy-all__image" src="img/catalog/buy-all.svg" alt="Подарок." height="80" width="78">
             <p class="buy-all__text">Закажите все <br>
               и получите чехол для
               кота в подарок!</p>
@@ -456,7 +456,7 @@
 
 
   <footer class="main-footer ">
-    <div class="main-footer--inner-pages">
+    <div class="main-footer__inner-pages">
       <section class="collaboration container-content--respons">
         <h2 class="collaboration__title">Приглашаем <br>
           к сотрудничеству
@@ -498,16 +498,15 @@
                 </a>
               </li>
               <li class="social__item reset-item">
-                <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"><span
-                    class="visually-hidden">Мы в
-                    Ютубе</span>
+                <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
                   <svg class="social__icon" aria-hidden="true" focusable="false" role="img" aria-label="Ютуб."
                     width="24" height="19" viewBox="0 0 24 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#a)">
-                      <path
-                        d="m15.85 8.8-5.24-3.5a.65.65 0 0 0-1.01.55v6.98a.65.65 0 0 0 1.01.54l5.24-3.49a.65.65 0 0 0 0-1.09Zm-4.94 2.8V7.08l3.4 2.27-3.4 2.27Zm12.48-8.56a2.4 2.4 0 0 0-1.45-1.63C18.22-.02 12.25 0 12 0S5.78-.02 2.06 1.4A2.4 2.4 0 0 0 .61 3.05 25.32 25.32 0 0 0 0 9.34c0 3.26.33 5.22.61 6.3a2.4 2.4 0 0 0 1.45 1.63c3.72 1.43 9.69 1.4 9.94 1.4h.08c.75 0 6.31-.04 9.86-1.4a2.4 2.4 0 0 0 1.45-1.64c.28-1.07.61-3.03.61-6.3 0-3.25-.33-5.22-.61-6.29Zm-1.27 12.27a1.1 1.1 0 0 1-.65.74c-3.5 1.34-9.4 1.32-9.47 1.32-.07 0-5.98.02-9.47-1.32a1.09 1.09 0 0 1-.65-.74c-.27-1-.57-2.85-.57-5.97 0-3.12.3-4.97.57-5.97a1.1 1.1 0 0 1 .65-.74C6.03 1.29 11.93 1.3 12 1.3c.07 0 5.98-.02 9.47 1.32a1.1 1.1 0 0 1 .65.74c.27 1 .57 2.85.57 5.97 0 3.12-.3 4.96-.57 5.97Z"
-                        fill="#666" />
-                  </svg></a>
+                    <path
+                      d="m15.85 8.8-5.24-3.5a.65.65 0 0 0-1.01.55v6.98a.65.65 0 0 0 1.01.54l5.24-3.49a.65.65 0 0 0 0-1.09Zm-4.94 2.8V7.08l3.4 2.27-3.4 2.27Zm12.48-8.56a2.4 2.4 0 0 0-1.45-1.63C18.22-.02 12.25 0 12 0S5.78-.02 2.06 1.4A2.4 2.4 0 0 0 .61 3.05 25.32 25.32 0 0 0 0 9.34c0 3.26.33 5.22.61 6.3a2.4 2.4 0 0 0 1.45 1.63c3.72 1.43 9.69 1.4 9.94 1.4h.08c.75 0 6.31-.04 9.86-1.4a2.4 2.4 0 0 0 1.45-1.64c.28-1.07.61-3.03.61-6.3 0-3.25-.33-5.22-.61-6.29Zm-1.27 12.27a1.1 1.1 0 0 1-.65.74c-3.5 1.34-9.4 1.32-9.47 1.32-.07 0-5.98.02-9.47-1.32a1.09 1.09 0 0 1-.65-.74c-.27-1-.57-2.85-.57-5.97 0-3.12.3-4.97.57-5.97a1.1 1.1 0 0 1 .65-.74C6.03 1.29 11.93 1.3 12 1.3c.07 0 5.98-.02 9.47 1.32a1.1 1.1 0 0 1 .65.74c.27 1 .57 2.85.57 5.97 0 3.12-.3 4.96-.57 5.97Z"
+                      fill="#666" />
+                  </svg>
+                  <span class="visually-hidden">Мы в Ютубе</span>
+                </a>
               </li>
               <li class="social__item reset-item">
                 <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
