--- a/source/form.html
+++ b/source/form.html
@@ -13,21 +13,6 @@
 </head>
 
 <body class="page-body">
-  <svg style="display: none">
-    <symbol viewBox="0 0 19 14" id="email-icon">
-      <line x1="0.65" y1="6" x2="0.65" y2="14" stroke-width="1.3" />
-      <line x1="17.65" y1="6" x2="17.65" y2="14" stroke-width="1.3" />
-      <line y1="13.35" x2="18" y2="13.35" stroke-width="1.3" />
-      <line y1="1.35" x2="18" y2="1.35" stroke-width="1.3" />
-      <path d="M17.35 3.1821L9.00002 9.67654L0.65 3.18209V1.65H3.5L9.00002 1.65H14H17.35V3.1821Z" stroke-width="1.3" />
-    </symbol>
-    <symbol viewBox="0 0 20 21" id="phone-icon">
-      <path
-        d="M17.9 9.75275H9.39999V10.9569H17.9L15.8 13.0641L16.7 13.9672L19.8 10.8565C19.8974 10.7263 19.95 10.5678 19.95 10.405C19.95 10.2421 19.8974 10.0837 19.8 9.95344L16.7 6.84277L15.8 7.74587L17.9 9.75275Z" />
-      <path
-        d="M8.10001 19.7872V13.5659C8.08846 13.41 8.02154 13.2635 7.91142 13.153C7.80131 13.0425 7.65532 12.9754 7.50001 12.9638H3.10001C3.10516 13.2815 3.23325 13.5848 3.45718 13.8095C3.68112 14.0342 3.98336 14.1627 4.30001 14.1679H6.80001V19.1851H3.10001C2.86326 19.2 2.62591 19.1676 2.40176 19.0896C2.17762 19.0117 1.97115 18.8898 1.79436 18.7311C1.61757 18.5723 1.47399 18.3799 1.37196 18.165C1.26992 17.9501 1.21148 17.717 1.20001 17.4793V3.43111C1.19181 2.96681 1.36516 2.51774 1.68292 2.18013C2.00069 1.84252 2.43758 1.64322 2.90001 1.62492H6.80001V6.64212H4.40001C4.08336 6.64729 3.78112 6.77581 3.55718 7.00052C3.33325 7.22523 3.20516 7.52851 3.20001 7.84625H7.60001C7.75531 7.83466 7.90131 7.76751 8.01142 7.65701C8.12154 7.54651 8.18846 7.40002 8.20001 7.24418V0.922517C8.15232 0.76584 8.06117 0.626022 7.93721 0.519407C7.81325 0.412792 7.66161 0.343785 7.50001 0.320453H3.10001C2.70599 0.307054 2.31321 0.371716 1.94411 0.510744C1.57501 0.649771 1.23684 0.860436 0.948933 1.13069C0.661026 1.40095 0.42903 1.7255 0.266207 2.08579C0.103385 2.44608 0.01293 2.83504 1.46306e-05 3.23043V17.1782C-0.0289644 17.5773 0.0246504 17.978 0.157487 18.3552C0.290324 18.7324 0.499509 19.078 0.771886 19.3701C1.04426 19.6623 1.37394 19.8947 1.74019 20.0529C2.10643 20.211 2.50132 20.2913 2.90001 20.2889H7.50001C7.5735 20.304 7.64943 20.3022 7.72216 20.2839C7.7949 20.2655 7.86259 20.2309 7.92021 20.1828C7.97783 20.1346 8.02391 20.074 8.05504 20.0055C8.08616 19.9371 8.10153 19.8624 8.10001 19.7872Z" />
-    </symbol>
-  </svg>
   <header class="main-header ">
     <div class="main-header__wrapper container-content--header">
       <div class="main-logo">
@@ -44,8 +29,8 @@
             height="18">
         </a>
       </div>
-      <nav class="main-navigation main-nav--closed main-nav--nojs">
-        <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <nav class="main-navigation main-navigation--closed main-navigation--nojs">
+        <button class="main-navigation__toggle" type="button"><span class="main-navigation__toggle-btn"></span></button>
         <ul class="main-navigation__list reset-list">
           <li class="main-navigation__item reset-item">
             <a class="main-navigation__link main-navigation__link--inner" href="index.html">Главная</a>
@@ -132,8 +117,9 @@
             <div class="form-email-phone__wrapper form-email-phone__wrapper--email">
               <input class="form-email-phone__field-text form-email-phone__field-text--email" type="email"
                 id="form-email" name="form-email" placeholder="kuklachev@gmail.com" required />
-              <svg class="form-email-phone__field-icon" width="19" height="14">
-                <use xlink:href="#email-icon"></use>
+              <svg class="form-email-phone__field-icon form-email-phone__field-icon--email" width="19" height="14"
+                aria-label="Иконка графы электронная почта">
+                <use xlink:href="img/sprite.svg#email-icon"></use>
               </svg>
             </div>
           </div>
@@ -142,8 +128,9 @@
             <div class="form-email-phone__wrapper form-email-phone__wrapper--phone">
               <input class="form-email-phone__field-text form-email-phone__field-text--phone" type="tel" id="form-phone"
                 name="form-phone" placeholder="8 (960) 900-60-90" required />
-              <svg class="form-email-phone__field-icon--phone" width="20" height="21">
-                <use xlink:href="#phone-icon"></use>
+              <svg class="form-email-phone__field-icon form-email-phone__field-icon--phone" width="20" height="21"
+                aria-label="Иконка графы телефон">
+                <use xlink:href="img/sprite.svg#phone-icon"></use>
               </svg>
             </div>
           </div>
@@ -195,7 +182,8 @@
           </li>
         </ul>
       </fieldset>
-      <div class="checkbox__wrapper"> <button class="form__button button" type="submit">
+      <div class="form__wrapper">
+        <button class="form__button button" type="submit">
           <span class="form__button-text button__text">Отправить заявку</span>
         </button>
         <p class="form__remark">
@@ -207,7 +195,7 @@
   </main>
 
   <footer class="main-footer">
-    <div class="main-footer--inner-pages">
+    <div class="main-footer__inner-pages">
       <section class="collaboration container-content--respons">
         <h2 class="collaboration__title">Приглашаем <br>
           к сотрудничеству
@@ -257,10 +245,9 @@
                   Ютубе</span>
                 <svg class="social__icon" aria-hidden="true" focusable="false" role="img" aria-label="Ютуб." width="24"
                   height="19" viewBox="0 0 24 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <g clip-path="url(#a)">
-                    <path
-                      d="m15.85 8.8-5.24-3.5a.65.65 0 0 0-1.01.55v6.98a.65.65 0 0 0 1.01.54l5.24-3.49a.65.65 0 0 0 0-1.09Zm-4.94 2.8V7.08l3.4 2.27-3.4 2.27Zm12.48-8.56a2.4 2.4 0 0 0-1.45-1.63C18.22-.02 12.25 0 12 0S5.78-.02 2.06 1.4A2.4 2.4 0 0 0 .61 3.05 25.32 25.32 0 0 0 0 9.34c0 3.26.33 5.22.61 6.3a2.4 2.4 0 0 0 1.45 1.63c3.72 1.43 9.69 1.4 9.94 1.4h.08c.75 0 6.31-.04 9.86-1.4a2.4 2.4 0 0 0 1.45-1.64c.28-1.07.61-3.03.61-6.3 0-3.25-.33-5.22-.61-6.29Zm-1.27 12.27a1.1 1.1 0 0 1-.65.74c-3.5 1.34-9.4 1.32-9.47 1.32-.07 0-5.98.02-9.47-1.32a1.09 1.09 0 0 1-.65-.74c-.27-1-.57-2.85-.57-5.97 0-3.12.3-4.97.57-5.97a1.1 1.1 0 0 1 .65-.74C6.03 1.29 11.93 1.3 12 1.3c.07 0 5.98-.02 9.47 1.32a1.1 1.1 0 0 1 .65.74c.27 1 .57 2.85.57 5.97 0 3.12-.3 4.96-.57 5.97Z"
-                      fill="#666" />
+                  <path
+                    d="m15.85 8.8-5.24-3.5a.65.65 0 0 0-1.01.55v6.98a.65.65 0 0 0 1.01.54l5.24-3.49a.65.65 0 0 0 0-1.09Zm-4.94 2.8V7.08l3.4 2.27-3.4 2.27Zm12.48-8.56a2.4 2.4 0 0 0-1.45-1.63C18.22-.02 12.25 0 12 0S5.78-.02 2.06 1.4A2.4 2.4 0 0 0 .61 3.05 25.32 25.32 0 0 0 0 9.34c0 3.26.33 5.22.61 6.3a2.4 2.4 0 0 0 1.45 1.63c3.72 1.43 9.69 1.4 9.94 1.4h.08c.75 0 6.31-.04 9.86-1.4a2.4 2.4 0 0 0 1.45-1.64c.28-1.07.61-3.03.61-6.3 0-3.25-.33-5.22-.61-6.29Zm-1.27 12.27a1.1 1.1 0 0 1-.65.74c-3.5 1.34-9.4 1.32-9.47 1.32-.07 0-5.98.02-9.47-1.32a1.09 1.09 0 0 1-.65-.74c-.27-1-.57-2.85-.57-5.97 0-3.12.3-4.97.57-5.97a1.1 1.1 0 0 1 .65-.74C6.03 1.29 11.93 1.3 12 1.3c.07 0 5.98-.02 9.47 1.32a1.1 1.1 0 0 1 .65.74c.27 1 .57 2.85.57 5.97 0 3.12-.3 4.96-.57 5.97Z"
+                    fill="#666" />
                 </svg></a>
             </li>
             <li class="social__item reset-item">
