--- a/source/index.html
+++ b/source/index.html
@@ -29,8 +29,8 @@
             height="18">
         </a>
       </div>
-      <nav class="main-navigation main-nav--closed main-nav--nojs">
-        <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <nav class="main-navigation main-navigation--closed main-navigation--nojs">
+        <button class="main-navigation__toggle" type="button"><span class="main-navigation__toggle-btn"></span></button>
         <ul class="main-navigation__list reset-list">
           <li class="main-navigation__item reset-item">
             <a class="main-navigation__link main-navigation__link--active">Главная</a>
@@ -53,7 +53,12 @@
 
         <div class="main-poster__image-wrapper image-wrapper">
           <picture>
-            <source media="(min-width: 1440px)"
+            <source type="image/webp" media="(min-width: 1440px)"
+              srcset="img/poster/desktop-jar.webp 1x, img/poster/desktop-jar@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/poster/tablet-jar.webp 1x, img/poster/tablet-jar@2x.webp 2x">
+            <source type="image/webp" srcset="img/poster/mobile-jar.webp 1x, img/poster/mobile-jar@2x.webp 2x">
+            <source media=" (min-width: 1440px)"
               srcset="img/poster/desktop-jar.png 1x, img/poster/desktop-jar@2x.png 2x">
             <source media="(min-width: 768px)" srcset="img/poster/tablet-jar.png 1x, img/poster/tablet-jar@2x.png 2x">
             <img class="main-poster__image" src="img/poster/mobile-jar.png" alt="Банка с кормом."
@@ -162,7 +167,7 @@
             <div class="example__range-line" aria-hidden="true"></div>
             <div class="example__range-button" aria-hidden="true">
               <svg class="example__range-button-svg" width="40" height="40" viewBox="0 0 40 40" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
+                aria-label="Ползунок для изменения кота" xmlns="http://www.w3.org/2000/svg">
                 <rect x="1" y="1" width="38" height="38" rx="19" fill="#fff" />
                 <path d="m16 11-8 9 8 9V11ZM32 20l-8-9v18l8-9Z" fill="#666" />
                 <rect x="1" y="1" width="38" height="38" rx="19" stroke="#666" stroke-width="2" />
@@ -170,10 +175,8 @@
             </div>
           </div>
         </div>
-    </div>
-    </div>
 
-    </section>
+      </section>
     </div>
   </main>
 
@@ -224,10 +227,9 @@
                   Ютубе</span>
                 <svg class="social__icon" aria-hidden="true" focusable="false" role="img" aria-label="Ютуб." width="24"
                   height="19" viewBox="0 0 24 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <g clip-path="url(#a)">
-                    <path
-                      d="m15.85 8.8-5.24-3.5a.65.65 0 0 0-1.01.55v6.98a.65.65 0 0 0 1.01.54l5.24-3.49a.65.65 0 0 0 0-1.09Zm-4.94 2.8V7.08l3.4 2.27-3.4 2.27Zm12.48-8.56a2.4 2.4 0 0 0-1.45-1.63C18.22-.02 12.25 0 12 0S5.78-.02 2.06 1.4A2.4 2.4 0 0 0 .61 3.05 25.32 25.32 0 0 0 0 9.34c0 3.26.33 5.22.61 6.3a2.4 2.4 0 0 0 1.45 1.63c3.72 1.43 9.69 1.4 9.94 1.4h.08c.75 0 6.31-.04 9.86-1.4a2.4 2.4 0 0 0 1.45-1.64c.28-1.07.61-3.03.61-6.3 0-3.25-.33-5.22-.61-6.29Zm-1.27 12.27a1.1 1.1 0 0 1-.65.74c-3.5 1.34-9.4 1.32-9.47 1.32-.07 0-5.98.02-9.47-1.32a1.09 1.09 0 0 1-.65-.74c-.27-1-.57-2.85-.57-5.97 0-3.12.3-4.97.57-5.97a1.1 1.1 0 0 1 .65-.74C6.03 1.29 11.93 1.3 12 1.3c.07 0 5.98-.02 9.47 1.32a1.1 1.1 0 0 1 .65.74c.27 1 .57 2.85.57 5.97 0 3.12-.3 4.96-.57 5.97Z"
-                      fill="#666" />
+                  <path
+                    d="m15.85 8.8-5.24-3.5a.65.65 0 0 0-1.01.55v6.98a.65.65 0 0 0 1.01.54l5.24-3.49a.65.65 0 0 0 0-1.09Zm-4.94 2.8V7.08l3.4 2.27-3.4 2.27Zm12.48-8.56a2.4 2.4 0 0 0-1.45-1.63C18.22-.02 12.25 0 12 0S5.78-.02 2.06 1.4A2.4 2.4 0 0 0 .61 3.05 25.32 25.32 0 0 0 0 9.34c0 3.26.33 5.22.61 6.3a2.4 2.4 0 0 0 1.45 1.63c3.72 1.43 9.69 1.4 9.94 1.4h.08c.75 0 6.31-.04 9.86-1.4a2.4 2.4 0 0 0 1.45-1.64c.28-1.07.61-3.03.61-6.3 0-3.25-.33-5.22-.61-6.29Zm-1.27 12.27a1.1 1.1 0 0 1-.65.74c-3.5 1.34-9.4 1.32-9.47 1.32-.07 0-5.98.02-9.47-1.32a1.09 1.09 0 0 1-.65-.74c-.27-1-.57-2.85-.57-5.97 0-3.12.3-4.97.57-5.97a1.1 1.1 0 0 1 .65-.74C6.03 1.29 11.93 1.3 12 1.3c.07 0 5.98-.02 9.47 1.32a1.1 1.1 0 0 1 .65.74c.27 1 .57 2.85.57 5.97 0 3.12-.3 4.96-.57 5.97Z"
+                    fill="#666" />
                 </svg></a>
             </li>
             <li class="social__item reset-item">
@@ -252,7 +254,8 @@
                 fill="#666" />
             </svg>
             <span class="visually-hidden">HTML
-              Academy</span></a>
+              Academy</span>
+          </a>
         </div>
       </div>
 
@@ -261,6 +264,7 @@
 
 
   <script src="js/app.js"></script>
+  <script src="js/slider.js"></script>
 
 </body>
 
